objects/Gift__c.object
<CustomObject>
    <fields>
        <fullName>Expected_Delivery__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Value__c</fullName>
        <label>Gift Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Giver_Reddit_Username__c</fullName>
        <label>Giver (Reddit Username)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <label>Legacy Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Comment__c</fullName>
        <label>Offer Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receiver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Person__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Receiver</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reported as Purchased</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suspicious__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspicious</label>
        <type>Checkbox</type>
    </fields>
    <label>Gift</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Giver_Reddit_Username__c</columns>
        <columns>Receiver__c</columns>
        <columns>Gift_Value__c</columns>
        <columns>Expected_Delivery__c</columns>
        <columns>Status__c</columns>
        <columns>Offer_Comment__c</columns>
        <columns>Suspicious__c</columns>
        <columns>IP_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Gift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>